# macos-utilities

./: .gitignore  Cargo.toml  README.md  build.rs  build.sh
com.niklasarnitz.macos-utilities.sdPlugin/: advanced-pi.html  manifest.json  sdpi.css  volume-pi.html
scripts/: test-playing-status.sh
src/: calendar.rs  constants.rs  infobar.rs  main.rs  protocol.rs  system_media.rs
