[package]
name = "macos-utilities"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "macos-utilities"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
base64 = "0.22"
image = "0.25"
imageproc = "0.26"
ab_glyph = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
log = "0.4"
simplelog = "0.12"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"

[build-dependencies]
resvg = "0.44"
